--- a/index.html
+++ b/index.html
@@ -5,10 +5,19 @@
     <title>Page Title</title>
 </head>
 
+<div > </div>
+
 <body>
-    <h1>This is a Heading</h1>
-    <img src="เอิน4.png" />
-    <p>This is a paragraph.</p>
+    <style>
+        body {
+              background-image: url('00.jpg');
+        }
+    </style>
+    <center><h1 style="color:white ;">Profile</h1></center>
+    <center><img src="278577.jpg"width="500px" height="700px" /></center>
+    <center><p style="color:white ;">ชื่อ เบญจมาภารณ์ วงศ์วิริยะ </p></center>
+    <center><p style="color:white ;">คณะวิทยาการสารสนเทศ สาขาวิศวกรรมซอฟต์แวร์</p></center>
+    <center><p style="color:white ;">มหาลัยบูรพา</p></center>
 </body>
 
 </html>
